Fix width on smaller devices

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -117,6 +117,14 @@
       filter: grayscale(100%);
       margin-right: 20px;
     }
-    
+
+  }
+}
+
+@media (max-width: 350px) {
+  .modal-container {
+    &-inner {
+      width: 100%;
+    }
   }
 }
